--- a/web/main.css
+++ b/web/main.css
@@ -193,11 +193,15 @@ body.switching_style, body.switching_style * {
 	position: absolute;
 	pointer-events: none;
 	
-	width: 95%;
-	height: 95%;
+	/* width: 100%;
+	height: 100%; */
+	top: 3px;
+	bottom: 3px;
+	left: 3px;
+	right: 3px;
 
 	border: transparent dashed 3px;
-	border-radius: 25px;
+	border-radius: 10px;
 
 	transition: border-color 0.1s ease-out;
 }
@@ -219,7 +223,7 @@ body.switching_style, body.switching_style * {
 	align-content: start;
 
 	gap: 5px;
-	padding: 5px;
+	padding: 10px;
 	box-sizing: border-box;
 }
 
