--- a/web/light_mode.css
+++ b/web/light_mode.css
@@ -29,6 +29,7 @@
 	--decision-box-task-hover-background-color: #47ec47;
 	--decision-box-task-hover-box-shadow: rgb(156, 156, 156) 0 3px 3px;
 
+	--task-font-size: 16px;
 
 	--decision-box-add-task-color: var(--text-color);
 	--decision-box-add-task-background-color: var(--accent-color);
