--- a/web/main.css
+++ b/web/main.css
@@ -194,10 +194,21 @@ body.switching_style, body.switching_style * {
 }
 
 .decision_box_square_name {
+	display: flex;
 	position: absolute;
+	box-sizing: border-box;
+
+	width: 100%;
+	height: 100%;
+
+	padding: 10px;
+
 	font-size: 32px;
 	color: var(--decision-box-square-name);
 	pointer-events: none;
+	flex-flow: row;
+	align-items: end;
+	justify-content: end;
 }
 
 .decision_box_square_highlight_box {
