--- a/web/eisenhower.css
+++ b/web/eisenhower.css
@@ -128,7 +128,7 @@
 	width: 100%;
 	height: 100%;
 
-	transition: scale 0.1s ease-out;
+	transition: scale 0.1s ease-out, opacity 0.2s ease-in-out;
 }
 
 .task_dragged .util_box {
